--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Qoutaions</title>
+    <title>Quotaions</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -52,7 +52,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#services">Qoutes</a>
+                        <a href="#services">Quotes</a>
                     </li>
                     <li>
                         <a href="#contact">Motivation</a>
@@ -73,8 +73,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Qoutations For You</h1>
-                        <h3>Qoutes that will motivate you</h3>
+                        <h1>Quotations For You</h1>
+                        <h3>Quotes that will motivate you</h3>
                         <hr class="intro-divider">
                     </div>
                 </div>
@@ -248,7 +248,7 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">Qoutes</a>
+                            <a href="#services">Quotes</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
